--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,9 +14,234 @@ body {
 }
 #game-container {
   border: none;
-  cursor: url(./assets/images/crosshair.png) 16 16, default;
+  cursor: url(../images/crosshair.png) 16 16, default;
   z-index: 1;
 }
+
+/* HUD */
+#element-layer {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem;
+  background: transparent;
+  box-sizing: border-box;
+  cursor: url(../images/crosshair.png) 16 16, default;
+  z-index: 2;
+}
+#element-layer #anchor-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  box-sizing: border-box;
+}
+#element-layer #anchor-wrapper .anchor-point {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: calc(33% - 1rem);
+  height: calc(33% - 1rem);
+  background-color: transparent;
+  gap: 1rem;
+}
+#element-layer #anchor-wrapper .anchor-point::before {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 50px;
+  height: 50px;
+  transition: background-color 400ms ease-in-out;
+}
+#element-layer #anchor-wrapper .anchor-point.unlocked::before {
+  background-color: rgba(185, 246, 202, 0.25);
+}
+#element-layer #anchor-wrapper .anchor-point.unlocked.hover::before {
+  background-color: rgba(185, 246, 202, 0.75);
+}
+.anchor-point.middle::before {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+.anchor-point.bottom::before {
+  bottom: 0;
+}
+.anchor-point.center::before {
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.anchor-point.right::before {
+  right: 0;
+}
+.anchor-point.top {
+  top: 0;
+}
+.anchor-point.middle {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  justify-content: center;
+}
+.anchor-point.bottom {
+  bottom: 0;
+  justify-content: end;
+}
+.anchor-point.left {
+  left: 0;
+}
+.anchor-point.center {
+  left: 0;
+  right: 0;
+  margin: auto;
+  align-items: center;
+}
+.anchor-point.right {
+  right: 0;
+  align-items: flex-end;
+}
+
+/* HUD Elements */
+.stat-element {
+  position: relative;
+  border-radius: 6px;
+  font-size: 12px;
+  font-family: "Knewave", system-ui;
+  font-weight: 100;
+  font-style: normal;
+  -webkit-user-select: none;  
+  -moz-user-select: none;    
+  -ms-user-select: none;      
+  user-select: none;
+  z-index: 1;
+}
+.stat-element.unlocked {
+  cursor: pointer;
+}
+.stat-element.unlocked::before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  width: 100%;
+  height: 100%;
+  padding: 2px;
+  border-radius: 0;
+  border: 2px dotted rgba(255, 255, 0, 0.75); 
+}
+.stat-element .element-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+}
+.stat-element .element-wrapper .background-progress {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transition: all 600ms ease-out;
+  z-index: 0;
+}
+.stat-element .element-wrapper .value-change {
+  visibility: hidden;
+  opacity: 0;
+  transition: all 600ms ease-out;
+}
+.stat-element .element-wrapper .value-change.visible {
+  visibility: visible;
+  opacity: 1;
+}
+.stat-element .element-wrapper * {
+  z-index: 1;
+}
+
+/* Stat Element - Level */
+#level.stat-element {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 3rem;
+  height: 3rem;
+  border: 2px solid rgb(94, 114, 235);
+  border-radius: 0 0 0 16px;
+  font-size: 16px;
+}
+#level.stat-element .element-wrapper {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: calc(100% - 6px);
+  height: calc(100% - 6px);
+  border-radius: 0 0 0 10px;
+  background: rgb(94, 114, 235);
+}
+#level.stat-element .level-value {
+  background-image: linear-gradient(#ff9190, #fdc094);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+/* Stat Element - Health */
+#health.stat-element {
+  color: rgba(78, 57, 196, 1);
+}
+#health.stat-element::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 4px;
+  left: 4px;
+  border-radius: 0 0 16px 0;
+  background: linear-gradient(#120c6e, #5e72eb);
+  z-index: -1;
+}
+#health.stat-element .element-wrapper {
+  padding: 0.525rem 1rem;
+  background: rgba(255, 227, 216, 0.75);
+  border-radius: 0 0 16px 0;
+  gap: 1rem;
+}
+#health.stat-element .element-wrapper .stat-label {
+  margin-right: auto;
+}
+#health.stat-element .background-progress {
+  border-radius: 0 0 16px 0;
+  background: linear-gradient(#ff9190, #fdc094);
+}
+
+/* Stat Element - Experience */
+#experience.stat-element {
+  border-radius: 0 16px 0 0;
+}
+#experience.stat-element .element-wrapper {
+  padding: 4px 0;
+  background: rgba(201, 206, 248, 0.5);
+  border-radius: 0 16px 0 0;
+}
+#experience.stat-element .background-progress {
+  background-color: rgb(0, 255, 255);
+  border-radius: 0 16px 0 0;
+}
+
+/* Stat Element - Wrappers */
+#core-stats {
+  display: flex;
+  width: fit-content;
+  gap: 4px;
+}
+#group-exp-health {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  gap: 4px;
+}
+
+/* Main menu */
 .menu {
   position: fixed;
   display: flex;
